try for priceButton css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -349,6 +349,8 @@ nav {
     .boton{
         height: 0px;
     }
+
+    /* not pushed try again */
     
     .priceButton{
         position: relative;
