--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.cdnfonts.com/css/pokemon-solid');
-@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&family=Lexend+Deca:wght@100..900&family=Tektur:wght@400..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&family=Lexend+Deca:wght@100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Tektur:wght@400..900&display=swap');
 
 * {
     transition: 1s ease-in-out;
@@ -156,7 +156,7 @@ nav {
     background-color: #ffffff;
     padding: 15px 0;
     top: -30px;
-    z-index: 2;
+    z-index: 5;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
     transform: translateY(160px);
@@ -183,7 +183,7 @@ nav {
 /* ====== Featured Section ====== */
 #featuredCarousel {
     padding-top: 150px;
-    height: 100dvh;
+    height: 750px;
     overflow: hidden;
     display: flex;
     justify-content: center;
@@ -198,7 +198,7 @@ nav {
         padding: 5px;
         background-color: #2e61ac;
         width: 55%;
-        min-width: 500px;
+        min-width: 300px;
         display: flex;
         /* justify-content: center; */
         /* align-items: center; */
@@ -256,14 +256,29 @@ nav {
 
 /* Item Boxes */
 #itemBoxes {
-    height: 100dvh;
+    height: 750px;
     display: flex;
     background-color: #2e61ac;
-    justify-content: center;
-    align-items: end;
+    justify-content: end;
+    align-items: center;
     padding: 10px 0;
     background-image: url("../img/itemboxesbg.jpeg");
     background-repeat: no-repeat;
+    overflow: hidden;
+    flex-direction: column;
+
+    .itemBoxesLabel{
+        position: relative;
+        top: 40px;
+        z-index: 2;
+        /* left: -110px; */
+        
+    }
+
+    .itemBoxesLabel img{
+        width: 220px;
+        filter: drop-shadow(2px 2px 0px rgb(83, 83, 83));
+    }
 
     .itemContainer {
         display: flex;
@@ -285,7 +300,7 @@ nav {
         /* border-radius: 25px; */
     }
 
-    .card{
+    .card {
         background-color: #ffe165;
         display: flex;
         justify-content: center;
@@ -295,7 +310,7 @@ nav {
         filter: drop-shadow(0px 0px 1px black);
     }
 
-    .card img{
+    .card img {
         /* width: 50%; */
         width: 100%;
         object-fit: fill;
@@ -310,7 +325,7 @@ nav {
         user-select: none;
     }
 
-    .img-container{
+    .img-container {
         border: solid;
         width: 50%;
     }
@@ -346,13 +361,13 @@ nav {
         background-color: #14151a;
     }
 
-    .boton{
+    .boton {
         height: 0px;
     }
 
     /* not pushed try again */
-    
-    .priceButton{
+
+    .priceButton {
         position: relative;
         top: -63px;
         right: -55px;
@@ -366,15 +381,217 @@ nav {
         border: solid #d0b33d;
     }
 
-    p{
-        margin:0;
+    p {
+        font-size: 0.9rem;
+        margin: 0;
         padding: 0;
         transform: skew(39deg);
         font-weight: 700;
         font-family: "Tektur", sans-serif;
-
     }
 }
+
+#pokecoinsSection{
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: end;
+    padding: 40px 30px;
+    padding-top: 250px;
+    
+    .cards-container{
+        /* border: solid; */
+        min-width: 400px;
+        width: 1200px;
+        height: 70%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+        gap: 30px;
+    }
+    
+    .card{
+        border-radius: 20px;
+        height: 375px;
+        width: 300px;
+        /* padding: 15px; */
+        /* border: solid rgb(114, 114, 114) 0.5px; */
+        overflow: hidden;
+        filter: drop-shadow(0px 0px 3px rgba(0, 0, 0, 0.158));
+    }
+    
+    .card-content{
+        /* border: solid; */
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        width: 100%;
+        gap: 10px;
+    }
+
+    .card-desc{
+        /* border: solid; */
+        height: 40%;
+        margin: 0 20px;
+        
+        h1{
+            font-size: 1.3rem;
+            font-weight: bold;
+            padding: 0;
+            margin: 0;
+            font-family: "Montserrat", sans-serif;
+            color: #515954;
+        }
+        
+        h2{
+            font-size: 0.9rem;
+            padding: 0;
+            margin: 0;
+            font-family: "Montserrat", sans-serif;
+        }
+    }
+    
+    .card-img{
+        /* border: solid; */
+        height: 170px;
+        border-radius: 15px;
+        background-image: url("../img/cardimgbg.png");
+        background-size: cover;
+        background-position: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        overflow: hidden;
+        
+        .coins{
+            /* border: solid; */
+            height: 130px;
+            z-index: 1;
+        }
+
+        .coins-glare{
+            /* border: solid; */
+            position: fixed;
+            /* right: -20%; */
+            height: 160px;
+            animation-name: coinglare;
+            animation-duration: 3s;
+            animation-iteration-count: infinite;
+            animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
+            transform: scale(1.5);
+        }
+    }
+    
+    .card-button{
+        /* border: solid; */
+        border-radius: 40px;
+        width: 130px;
+        padding: 10px;
+        margin: 0 25px;
+        background-image: linear-gradient(to right, #f8ee00,#ff8a00);
+        margin-bottom: 20px;
+        font-family: "Tektur", sans-serif;
+        font-weight: 700;
+        color: white;
+        text-align: center;
+    }
+    .card-button:hover{
+        background-image: linear-gradient(to right, #d3cc00,#ce6e00);
+        cursor: pointer;
+    }
+
+}
+
+@keyframes coinglare {
+   0%{opacity: 100%;} 
+   50%{opacity: 50%;} 
+   100%{opacity: 100%;} 
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media (max-width: 1000px) {
+    .mini-navbar {
+        /* transform: translateY(160px) scale(0.9); */
+        /* width: 80%; */
+        display: none;
+    }
+
+    #featuredCarousel {
+        padding-top: 0px;
+    }
+
+    nav .container .logo {
+        width: 80px;
+    }
+
+    nav .store-name {
+        font-size: 1.4rem;
+    }
+
+    .outerContainer {
+        width: 40%;
+    }
+
+    #itemBoxes {
+        justify-content: center;
+        align-items: center;
+
+        .itemContainer {
+            width: 900px;
+        }
+
+        .priceButton {
+            top: -54px;
+            right: -48px;
+            width: 100px;
+            transform: skew(-39deg);
+        }
+
+        p {
+            font-size: 0.7rem;
+        }
+
+
+
+
+    }
+
+
+}
+
+
 
 @media screen and (max-width: 768px) {
     .slide-content {
@@ -384,11 +601,44 @@ nav {
     .swiper-navBtn {
         display: none;
     }
+
+    #itemBoxes {
+
+
+        .itemContainer {
+            width: 600px;
+        }
+
+        .priceButton {
+            top: -53px;
+            right: -45px;
+            width: 90px;
+            transform: skew(-39deg);
+        }
+
+        p {
+            font-size: 0.7rem;
+        }
+
+
+
+
+    }
+
 }
 
-@media (max-width: 1000px) {
-    .mini-navbar {
-        transform: translateY(160px) scale(0.9);
-        width: 600px;
+@media (max-width: 500px) {
+
+    #itemBoxes {
+        .itemContainer {
+            width: 350px;
+        }
+
+        .priceButton {
+            top: -56px;
+            right: -50px;
+            width: 100px;
+            transform: skew(-39deg);
+        }
     }
 }
